fixed text overlap for projects

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ form button {
 
 .projects article {
   display: grid;
-  grid-template-rows: subgrid;
   grid-row: span 4;
   gap: 1em;
 }
